// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all bugs field present 1`] = `
Object {
  "email": "bugs@foobar.local",
  "url": "bugs.foobar.local",
}
`;

exports[`no bugs field present 1`] = `undefined`;

exports[`npm overrides 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "overrides": Object {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": Object {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "pnpm": Object {
    "overrides": Object {
      "other-dep": "*",
      "some-dep": "1.0.0",
    },
  },
  "scripts": Object {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`single bugs field present 1`] = `
Object {
  "email": "bugs@foobar.local",
}
`;

exports[`yarn resolutions 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "resolutions": Object {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": Object {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn2 resolutions 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "resolutions": Object {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": Object {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;
